--- a/contact.html
+++ b/contact.html
@@ -2,176 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact - Prestige Griffin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us - Prestige Griffin</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <style>
-    :root {
-      --maroon: #6F0E0B;
-      --gold: #C99E47;
-      --cream: #f5eac2;
-      --soft-gold: rgba(201, 158, 71, 0.15);
-    }
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: 'Open Sans', sans-serif;
-      background-color: var(--maroon);
-      color: var(--gold);
-      overflow-x: hidden;
-    }
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 0;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      background-color: var(--maroon);
-      position: relative;
-      z-index: 5;
-    }
-    header img {
-      max-height: 100px;
-    }
-    nav a {
-      color: var(--gold);
-      margin-left: 1.5rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      padding: 4rem 2rem;
-      max-width: 800px;
-      margin: auto;
-      text-align: center;
-    }
-    section h2 {
-      font-size: 2rem;
-      font-family: 'Playfair Display', serif;
-      margin-bottom: 1rem;
-      color: var(--gold);
-    }
-    section p {
-      font-size: 1.1rem;
-      line-height: 1.7;
-      color: var(--cream);
-      margin-bottom: 2rem;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.75rem;
-      margin: 0.5rem 0;
-      border: 1px solid var(--gold);
-      background: transparent;
-      color: white;
-      font-family: 'Open Sans', sans-serif;
-    }
-    button {
-      background-color: var(--gold);
-      border: none;
-      padding: 0.75rem 1.5rem;
-      color: black;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 1rem;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      background-color: #1a0605;
-      color: var(--gold);
-    }
+    :root { --primary-red:#7a0a0a; --dark-red:#4a0303; --gold:#d4af37; --cream:#f5f5dc; }
+    body { margin:0; font-family:'Open Sans',sans-serif; background-color:var(--dark-red); color:var(--cream); padding-top:80px; }
+    header { display:flex; align-items:center; padding:1rem 2rem; border-bottom:2px solid var(--gold); background-color:var(--primary-red); position:fixed; top:0; left:0; width:100%; z-index:1000; justify-content:space-between; }
+    .brand { display:flex; align-items:center; gap:10px; }
+    .brand img { max-height:50px; }
+    .brand h1 { font-family:'Playfair Display', serif; color:var(--gold); font-size:1.1rem; margin:0; font-weight:900; letter-spacing:0.5px; text-transform:uppercase; }
+    nav { display:flex; align-items:center; gap:1.5rem; }
+    nav a { text-decoration:none; font-weight:900; color:var(--gold); font-size:1.1rem; text-transform:uppercase; transition:color 0.3s ease; }
+    nav a:hover { color:var(--cream); }
+    .page-title { text-align:center; padding:3rem 2rem 1rem; color:var(--gold); font-family:'Playfair Display', serif; font-size:2.5rem; }
+    .contact-form { max-width:600px; margin:0 auto; padding:1rem 2rem; display:flex; flex-direction:column; gap:1rem; }
+    .contact-form input, .contact-form textarea { padding:0.8rem; border-radius:8px; border:2px solid var(--gold); background:var(--dark-red); color:var(--cream); font-size:1rem; width:100%; }
+    .contact-form input::placeholder, .contact-form textarea::placeholder { color:var(--gold); opacity:0.7; }
+    .contact-form button { padding:0.8rem; border:none; border-radius:8px; background:var(--gold); color:var(--dark-red); font-weight:900; font-size:1rem; cursor:pointer; transition: background 0.3s ease; }
+    .contact-form button:hover { background:rgba(212,175,55,0.8); }
+    .footer { background:var(--primary-red); text-align:center; padding:0.5rem; margin-top:2rem; }
+    .footer p { margin:0; font-size:0.8rem; color:var(--gold); }
   </style>
 </head>
 <body>
-<canvas id="bg-canvas"></canvas>
-<header>
-  <img src="PG.png" alt="Prestige Griffin Logo" class="h-20 w-auto rounded-full border-2 border-[#D4AF37] shadow-lg" />
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+  <header>
+    <div class="brand">
+      <img src="PG.png" alt="Prestige Griffin Logo">
+      <h1>Prestige Griffin</h1>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+    </nav>
+  </header>
 
-<section>
-  <h2>Contact Us</h2>
-  <p>
-    We partner with leaders and organizations who value security, trust, and elite performance.
-    Submit your inquiry and a partner will respond within 48 hours.
-  </p>
-
-  <form>
-    <input type="text" placeholder="Your Name" required />
-    <input type="email" placeholder="Your Email" required />
-    <textarea placeholder="Your Message" rows="5" required></textarea>
+  <h2 class="page-title" data-aos="fade-up">Contact Us</h2>
+  <form class="contact-form" data-aos="fade-up" data-aos-delay="200">
+    <input type="text" placeholder="Full Name" required>
+    <input type="email" placeholder="Email Address" required>
+    <input type="text" placeholder="Phone Number" required>
+    <textarea rows="5" placeholder="Your Message" required></textarea>
     <button type="submit">Send Message</button>
   </form>
-</section>
 
-<footer>&copy; 2025 Prestige Griffin. All rights reserved.</footer>
+  <footer class="footer">
+    <p>© 2018 Prestige Griffin. All rights reserved.</p>
+  </footer>
 
-<script>
-const canvas = document.getElementById('bg-canvas');
-const ctx = canvas.getContext('2d');
-let width, height, particles = [];
-
-function resizeCanvas() {
-  width = canvas.width = window.innerWidth;
-  height = canvas.height = window.innerHeight;
-}
-window.addEventListener('resize', resizeCanvas);
-resizeCanvas();
-
-class Particle {
-  constructor() {
-    this.x = Math.random() * width;
-    this.y = Math.random() * height;
-    this.r = Math.random() * 2 + 1;
-    this.dx = (Math.random() - 0.5) * 0.5;
-    this.dy = (Math.random() - 0.5) * 0.5;
-  }
-  move() {
-    this.x += this.dx;
-    this.y += this.dy;
-    if (this.x < 0 || this.x > width) this.dx *= -1;
-    if (this.y < 0 || this.y > height) this.dy *= -1;
-  }
-  draw() {
-    ctx.beginPath();
-    ctx.arc(this.x, this.y, this.r, 0, Math.PI * 2);
-    ctx.fillStyle = 'var(--soft-gold)';
-    ctx.fill();
-  }
-}
-function initParticles(num = 100) {
-  particles = [];
-  for (let i = 0; i < num; i++) {
-    particles.push(new Particle());
-  }
-}
-function animate() {
-  ctx.clearRect(0, 0, width, height);
-  particles.forEach(p => {
-    p.move();
-    p.draw();
-  });
-  requestAnimationFrame(animate);
-}
-initParticles();
-animate();
-</script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script> AOS.init({ duration:1200 }); </script>
 </body>
 </html>
