--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us - Prestige Griffin</title>
+  <title>Services - Prestige Griffin</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
@@ -18,11 +18,12 @@
     nav a { text-decoration:none; font-weight:900; color:var(--gold); font-size:1.1rem; text-transform:uppercase; transition:color 0.3s ease; }
     nav a:hover { color:var(--cream); }
     .page-title { text-align:center; padding:3rem 2rem 1rem; color:var(--gold); font-family:'Playfair Display', serif; font-size:2.5rem; }
-    .contact-form { max-width:600px; margin:0 auto; padding:1rem 2rem; display:flex; flex-direction:column; gap:1rem; }
-    .contact-form input, .contact-form textarea { padding:0.8rem; border-radius:8px; border:2px solid var(--gold); background:var(--dark-red); color:var(--cream); font-size:1rem; width:100%; }
-    .contact-form input::placeholder, .contact-form textarea::placeholder { color:var(--gold); opacity:0.7; }
-    .contact-form button { padding:0.8rem; border:none; border-radius:8px; background:var(--gold); color:var(--dark-red); font-weight:900; font-size:1rem; cursor:pointer; transition: background 0.3s ease; }
-    .contact-form button:hover { background:rgba(212,175,55,0.8); }
+    .services { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:2rem; padding:3rem; }
+    .service-box { background:rgba(212,175,55,0.05); border:2px solid var(--gold); border-radius:15px; padding:2rem; text-align:center; transition: transform 0.3s ease, box-shadow 0.3s ease; }
+    .service-box:hover { transform:translateY(-10px); box-shadow:0 6px 18px rgba(0,0,0,0.6); background:rgba(212,175,55,0.15); }
+    .service-box h3 { color:var(--gold); margin-bottom:1rem; font-family:'Playfair Display', serif; display:flex; align-items:center; justify-content:center; gap:10px; font-size:1.3rem; }
+    .service-box h3 i { font-size:1.6rem; color:var(--gold); }
+    .service-box p { font-size:1rem; line-height:1.6; }
     .footer { background:var(--primary-red); text-align:center; padding:0.5rem; margin-top:2rem; }
     .footer p { margin:0; font-size:0.8rem; color:var(--gold); }
   </style>
@@ -41,14 +42,25 @@
     </nav>
   </header>
 
-  <h2 class="page-title" data-aos="fade-up">Contact Us</h2>
-  <form class="contact-form" data-aos="fade-up" data-aos-delay="200">
-    <input type="text" placeholder="Full Name" required>
-    <input type="email" placeholder="Email Address" required>
-    <input type="text" placeholder="Phone Number" required>
-    <textarea rows="5" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
+  <h2 class="page-title" data-aos="fade-up">Our Services</h2>
+  <section class="services">
+    <div class="service-box" data-aos="fade-up" data-aos-delay="100">
+      <h3><i class="fas fa-university"></i> Finance & Banking</h3>
+      <p>Expert advisory in global finance, investment strategies, and banking solutions tailored to our clients’ needs.</p>
+    </div>
+    <div class="service-box" data-aos="fade-up" data-aos-delay="200">
+      <h3><i class="fas fa-microchip"></i> Technology</h3>
+      <p>Driving innovation with digital transformation, AI integration, and scalable technology solutions.</p>
+    </div>
+    <div class="service-box" data-aos="fade-up" data-aos-delay="300">
+      <h3><i class="fas fa-shield-alt"></i> Defence & Arms Advisory</h3>
+      <p>Providing strategic insights and partnerships in defense and arms, ensuring sustainable security investments.</p>
+    </div>
+    <div class="service-box" data-aos="fade-up" data-aos-delay="400">
+      <h3><i class="fas fa-oil-can"></i> Commodities Trading</h3>
+      <p>Specialized in global commodities such as oil, gas, and raw materials, delivering value through trusted trading networks.</p>
+    </div>
+  </section>
 
   <footer class="footer">
     <p>© 2018 Prestige Griffin. All rights reserved.</p>
