--- a/index.html
+++ b/index.html
@@ -177,10 +177,13 @@
       <h1>Prestige Griffin</h1>
     </div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Services</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact Us</a>
+     <nav>
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact Us</a>
+     </nav>
+
     </nav>
   </header>
 
