--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
   <style>
     :root { --primary-red:#7a0a0a; --dark-red:#4a0303; --gold:#d4af37; --cream:#f5f5dc; }
     body { margin:0; font-family:'Open Sans',sans-serif; background-color:var(--dark-red); color:var(--cream); padding-top:80px; }
-    header { display:flex; align-items:center; padding:1rem 2rem; border-bottom:2px solid var(--gold); background-color:var(--primary-red); position:fixed; top:0; left:0; width:100%; z-index:1000; justify-content:space-between; }
+    header { display:flex; align-items:center; padding:1rem 2rem; border-bottom:2px solid var(--gold); background-color:var(--primary-red); position:fixed; top:0; left:0; width:100%; z-index:1000; justify-content:space-between;  gap: 10rem; }
     .brand { display:flex; align-items:center; gap:10px; }
     .brand img { max-height:50px; }
     .brand h1 { font-family:'Playfair Display', serif; color:var(--gold); font-size:1.1rem; margin:0; font-weight:900; letter-spacing:0.5px; text-transform:uppercase; }
