--- a/services.html
+++ b/services.html
@@ -24,7 +24,11 @@
       justify-content: flex-start; /* Align items to start */
       gap: 10rem; /* Space between brand and nav */
           }    
-    .brand { display:flex; align-items:center; gap:10px; }
+ .brand {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
     .brand img { max-height:50px; }
     .brand h1 { font-family:'Playfair Display', serif; color:var(--gold); font-size:1.1rem; margin:0; font-weight:900; letter-spacing:0.5px; text-transform:uppercase; }
     nav { display:flex; align-items:center; gap:1.5rem; }
