--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
   <style>
     :root { --primary-red:#7a0a0a; --dark-red:#4a0303; --gold:#d4af37; --cream:#f5f5dc; }
     body { margin:0; font-family:'Open Sans',sans-serif; background-color:var(--dark-red); color:var(--cream); padding-top:80px; }
-    header {
+        header {
       display: flex;
       align-items: center;
       padding: 1rem 2rem;
@@ -23,14 +23,25 @@
       z-index: 1000;
       justify-content: flex-start; /* Align items to start */
       gap: 10rem; /* Space between brand and nav */
-          }    
- .brand {
+          }
+    .brand {
       display: flex;
       align-items: center;
       gap: 10px;
     }
-    .brand img { max-height:50px; }
-    .brand h1 { font-family:'Playfair Display', serif; color:var(--gold); font-size:1.1rem; margin:0; font-weight:900; letter-spacing:0.5px; text-transform:uppercase; }
+    .brand img {
+      max-height: 50px;
+      animation: fadeInDown 1.5s ease;
+    }
+    .brand h1 {
+      font-family: 'Playfair Display', serif;
+      color: var(--gold);
+      font-size: 1.1rem;
+      margin: 0;
+      font-weight: 900;
+      letter-spacing: 0.5px;
+      text-transform: uppercase;
+    }
     nav { display:flex; align-items:center; gap:1.5rem; }
     nav a { text-decoration:none; font-weight:900; color:var(--gold); font-size:1.1rem; text-transform:uppercase; transition:color 0.3s ease; }
     nav a:hover { color:var(--cream); }
