--- a/contact.html
+++ b/contact.html
@@ -189,6 +189,19 @@
       <img src="PG.png" alt="Prestige Griffin Logo">
       <h1>Prestige Griffin</h1>
     </div>
+     <nav>
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact Us</a>
+     </nav>
+  </header>
+<body>
+  <header>
+    <div class="brand">
+      <img src="PG.png" alt="Prestige Griffin Logo">
+      <h1>Prestige Griffin</h1>
+    </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
