--- a/contact.html
+++ b/contact.html
@@ -3,23 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prestige Griffin</title>
+  <title>Contact Us - Prestige Griffin</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <style>
-    :root {
-      --primary-red: #7a0a0a;
-      --dark-red: #4a0303;
-      --gold: #d4af37;
-      --cream: #f5f5dc;
-    }
-    body {
-      margin: 0;
-      font-family: 'Open Sans', sans-serif;
-      background-color: var(--dark-red);
-      color: var(--cream);
-    }
+    :root { --primary-red:#7a0a0a; --dark-red:#4a0303; --gold:#d4af37; --cream:#f5f5dc; }
+    body { margin:0; font-family:'Open Sans',sans-serif; background-color:var(--dark-red); color:var(--cream); padding-top:80px; }
     header {
       display: flex;
       align-items: center;
@@ -51,138 +41,19 @@
       font-weight: 900;
       letter-spacing: 0.5px;
       text-transform: uppercase;
-    }
-    @keyframes fadeInDown {
-      from {opacity: 0; transform: translateY(-50px);} 
-      to {opacity: 1; transform: translateY(0);} 
-    }
-    nav {
-      display: flex;
-      align-items: center;
-      gap: 1.5rem;
-      margin-left: 40rem;
-    }
-    nav a {
-      text-decoration: none;
-      font-weight: 900;
-      color: var(--gold);
-      font-size: 1.1rem;
-      text-transform: uppercase;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: var(--cream);
-    }
-    .intro {
-      text-align: center;
-      padding: 5rem 2rem;
-      position: relative;
-      overflow: hidden;
-    }
-    .intro h2 {
-      color: var(--gold);
-      font-family: 'Playfair Display', serif;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      position: relative;
-      z-index: 2;
-    }
-    .intro p {
-      max-width: 800px;
-      margin: 0 auto;
-      font-size: 1.2rem;
-      line-height: 1.8;
-      color: var(--cream);
-      position: relative;
-      z-index: 2;
-    }
-    /* Geometric animated background */
-    .intro::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: repeating-linear-gradient(45deg, rgba(212,175,55,0.1) 0px, rgba(212,175,55,0.1) 2px, transparent 2px, transparent 40px),
-                  repeating-linear-gradient(-45deg, rgba(212,175,55,0.1) 0px, rgba(212,175,55,0.1) 2px, transparent 2px, transparent 40px);
-      background-size: 80px 80px;
-      animation: moveGrid 8s linear infinite;
-      z-index: 1;
-    }
-    @keyframes moveGrid {
-      0% {background-position: 0 0, 0 0;}
-      100% {background-position: 80px 80px, -80px -80px;}
-    }
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      padding: 3rem;
-    }
-    .service-box {
-      background: rgba(212, 175, 55, 0.05);
-      border: 2px solid var(--gold);
-      border-radius: 15px;
-      padding: 2rem;
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: fadeIn 1.5s ease;
-    }
-    .service-box:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-      background: rgba(212, 175, 55, 0.15);
-    }
-    .service-box h3 {
-      color: var(--gold);
-      margin-bottom: 1rem;
-      font-family: 'Playfair Display', serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      font-size: 1.3rem;
-    }
-    .service-box h3 i {
-      font-size: 1.6rem;
-      color: var(--gold);
-    }
-    .service-box p {
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-    @keyframes bounce {
-      0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
-      40% {transform: translateY(-10px);} 
-      60% {transform: translateY(-5px);} 
-    }
-    .footer {
-      background: var(--primary-red);
-      text-align: center;
-      padding: 0.5rem;
-      margin-top: 2rem;
-    }
-    .footer p {
-      margin: 0;
-      font-size: 0.8rem;
-      color: var(--gold);
-    }
+    }    nav { display:flex; align-items:center; gap:1.5rem; }
+    nav a { text-decoration:none; font-weight:900; color:var(--gold); font-size:1.1rem; text-transform:uppercase; transition:color 0.3s ease; }
+    nav a:hover { color:var(--cream); }
+    .page-title { text-align:center; padding:3rem 2rem 1rem; color:var(--gold); font-family:'Playfair Display', serif; font-size:2.5rem; }
+    .contact-form { max-width:600px; margin:0 auto; padding:1rem 2rem; display:flex; flex-direction:column; gap:1rem; }
+    .contact-form input, .contact-form textarea { padding:0.8rem; border-radius:8px; border:2px solid var(--gold); background:var(--dark-red); color:var(--cream); font-size:1rem; width:100%; }
+    .contact-form input::placeholder, .contact-form textarea::placeholder { color:var(--gold); opacity:0.7; }
+    .contact-form button { padding:0.8rem; border:none; border-radius:8px; background:var(--gold); color:var(--dark-red); font-weight:900; font-size:1rem; cursor:pointer; transition: background 0.3s ease; }
+    .contact-form button:hover { background:rgba(212,175,55,0.8); }
+    .footer { background:var(--primary-red); text-align:center; padding:0.5rem; margin-top:2rem; }
+    .footer p { margin:0; font-size:0.8rem; color:var(--gold); }
   </style>
 </head>
-<body>
-  <header>
-    <div class="brand">
-      <img src="PG.png" alt="Prestige Griffin Logo">
-      <h1>Prestige Griffin</h1>
-    </div>
-     <nav>
-        <a href="index.html">Home</a>
-        <a href="services.html">Services</a>
-        <a href="about.html">About Us</a>
-        <a href="contact.html">Contact Us</a>
-     </nav>
-  </header>
 <body>
   <header>
     <div class="brand">
