--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     .contact-form { max-width:600px; margin:0 auto; padding:1rem 2rem; display:flex; flex-direction:column; gap:1rem; }
     .contact-form input, .contact-form textarea { padding:0.8rem; border-radius:8px; border:2px solid var(--gold); background:var(--dark-red); color:var(--cream); font-size:1rem; width:100%; }
     .contact-form input::placeholder, .contact-form textarea::placeholder { color:var(--gold); opacity:0.7; }
-    .contact-form button { padding:0.8rem; border:none; border-radius:8px; background:var(--gold); color:var(--dark-red); font-weight:900; font-size:1rem; cursor:pointer; transition: background 0.3s ease; }
+    .contact-form button { padding:0.8rem; border:none; border-radius:8px; background:var(--gold); color:var(--dark-red); font-weight:900; font-size:1rem; cursor:pointer; transition: background 0.3s ease; width:640px; }
     .contact-form button:hover { background:rgba(212,175,55,0.8); }
     .footer { background:var(--primary-red); text-align:center; padding:0.5rem; margin-top:2rem; }
     .footer p { margin:0; font-size:0.8rem; color:var(--gold); }
