--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       font-weight: 900;
       letter-spacing: 0.5px;
       text-transform: uppercase;
-    }    nav { display:flex; align-items:center; gap:1.5rem; }
+    }    nav { display:flex; align-items:center; gap:1.5rem; margin-left: 40rem }
     nav a { text-decoration:none; font-weight:900; color:var(--gold); font-size:1.1rem; text-transform:uppercase; transition:color 0.3s ease; }
     nav a:hover { color:var(--cream); }
     .page-title { text-align:center; padding:3rem 2rem 1rem; color:var(--gold); font-family:'Playfair Display', serif; font-size:2.5rem; }
