--- a/services.html
+++ b/services.html
@@ -161,7 +161,11 @@
       background: var(--primary-red);
       text-align: center;
       padding: 0.5rem;
-      margin-top: 2rem;
+      position: fixed; /* Sticky footer */
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
     }
     .footer p {
       margin: 0;
