--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prestige Griffin</title>
+  <title>About Us - Prestige Griffin</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
@@ -19,6 +19,8 @@
       font-family: 'Open Sans', sans-serif;
       background-color: var(--dark-red);
       color: var(--cream);
+      padding-top: 90px; /* Prevent content from hiding behind fixed header */
+      padding-bottom: 3rem; /* Prevent footer overlap */
     }
     header {
       display: flex;
@@ -31,9 +33,9 @@
       left: 0;
       width: 100%;
       z-index: 1000;
-      justify-content: flex-start; /* Align items to start */
-      gap: 10rem; /* Space between brand and nav */
-          }
+      justify-content: flex-start;
+      gap: 10rem;
+    }
     .brand {
       display: flex;
       align-items: center;
@@ -73,95 +75,26 @@
     nav a:hover {
       color: var(--cream);
     }
-    .intro {
+    .page-title {
       text-align: center;
-      padding: 5rem 2rem;
-      position: relative;
-      overflow: hidden;
-    }
-    .intro h2 {
       color: var(--gold);
       font-family: 'Playfair Display', serif;
       font-size: 2.5rem;
       margin-bottom: 1rem;
-      position: relative;
-      z-index: 2;
     }
-    .intro p {
+    .about-content {
       max-width: 800px;
       margin: 0 auto;
-      font-size: 1.2rem;
-      line-height: 1.8;
-      color: var(--cream);
-      position: relative;
-      z-index: 2;
-    }
-    /* Geometric animated background */
-    .intro::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: repeating-linear-gradient(45deg, rgba(212,175,55,0.1) 0px, rgba(212,175,55,0.1) 2px, transparent 2px, transparent 40px),
-                  repeating-linear-gradient(-45deg, rgba(212,175,55,0.1) 0px, rgba(212,175,55,0.1) 2px, transparent 2px, transparent 40px);
-      background-size: 80px 80px;
-      animation: moveGrid 8s linear infinite;
-      z-index: 1;
-    }
-    @keyframes moveGrid {
-      0% {background-position: 0 0, 0 0;}
-      100% {background-position: 80px 80px, -80px -80px;}
-    }
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      padding: 3rem;
-    }
-    .service-box {
-      background: rgba(212, 175, 55, 0.05);
-      border: 2px solid var(--gold);
-      border-radius: 15px;
       padding: 2rem;
       text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: fadeIn 1.5s ease;
-    }
-    .service-box:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-      background: rgba(212, 175, 55, 0.15);
-    }
-    .service-box h3 {
-      color: var(--gold);
-      margin-bottom: 1rem;
-      font-family: 'Playfair Display', serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      font-size: 1.3rem;
-    }
-    .service-box h3 i {
-      font-size: 1.6rem;
-      color: var(--gold);
-    }
-    .service-box p {
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-    @keyframes bounce {
-      0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
-      40% {transform: translateY(-10px);} 
-      60% {transform: translateY(-5px);} 
+      font-size: 1.2rem;
+      line-height: 1.8;
     }
     .footer {
       background: var(--primary-red);
       text-align: center;
       padding: 0.5rem;
-      position: fixed; /* Sticky footer */
+      position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
@@ -180,15 +113,13 @@
       <img src="PG.png" alt="Prestige Griffin Logo">
       <h1>Prestige Griffin</h1>
     </div>
-     <nav>
-        <a href="index.html">Home</a>
-        <a href="services.html">Services</a>
-        <a href="about.html">About Us</a>
-        <a href="contact.html">Contact Us</a>
-     </nav>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+    </nav>
   </header>
-<body>
-
 
   <h2 class="page-title" data-aos="fade-up">About Us</h2>
   <div class="about-content" data-aos="fade-up" data-aos-delay="200">
