--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       <p>Driving innovation with digital transformation, AI integration, and scalable technology solutions.</p>
     </div>
     <div class="service-box" data-aos="fade-up" data-aos-delay="300">
-      <h3><i class="fas fa-shield-alt"></i> Defence & Arms Advisory</h3>
+      <h3><i class="fas fa-shield-alt"></i> Defense & Arms Advisory</h3>
       <p>Providing strategic insights and partnerships in defense and arms, ensuring sustainable security investments.</p>
     </div>
     <div class="service-box" data-aos="fade-up" data-aos-delay="400">
