--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,83 @@
     .contact-form button:hover { background:rgba(212,175,55,0.8); }
     .footer { background:var(--primary-red); text-align:center; padding:0.5rem; margin-top:2rem; }
     .footer p { margin:0; font-size:0.8rem; color:var(--gold); }
+        /* Geometric animated background */
+    .intro::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: repeating-linear-gradient(45deg, rgba(212,175,55,0.1) 0px, rgba(212,175,55,0.1) 2px, transparent 2px, transparent 40px),
+                  repeating-linear-gradient(-45deg, rgba(212,175,55,0.1) 0px, rgba(212,175,55,0.1) 2px, transparent 2px, transparent 40px);
+      background-size: 80px 80px;
+      animation: moveGrid 8s linear infinite;
+      z-index: 1;
+    }
+    @keyframes moveGrid {
+      0% {background-position: 0 0, 0 0;}
+      100% {background-position: 80px 80px, -80px -80px;}
+    }
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      padding: 3rem;
+    }
+    .service-box {
+      background: rgba(212, 175, 55, 0.05);
+      border: 2px solid var(--gold);
+      border-radius: 15px;
+      padding: 2rem;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: fadeIn 1.5s ease;
+    }
+    .service-box:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.6);
+      background: rgba(212, 175, 55, 0.15);
+    }
+    .service-box h3 {
+      color: var(--gold);
+      margin-bottom: 1rem;
+      font-family: 'Playfair Display', serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      font-size: 1.3rem;
+    }
+    .service-box h3 i {
+      font-size: 1.6rem;
+      color: var(--gold);
+    }
+    .service-box p {
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+      40% {transform: translateY(-10px);} 
+      60% {transform: translateY(-5px);} 
+    }
+    .footer {
+      background: var(--primary-red);
+      text-align: center;
+      padding: 0.5rem;
+      position: fixed; /* Sticky footer */
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+    .footer p {
+      margin: 0;
+      font-size: 0.8rem;
+      color: var(--gold);
+    }
+
   </style>
 </head>
 <body>
@@ -67,7 +144,7 @@
       <a href="contact.html">Contact Us</a>
     </nav>
   </header>
-
+  <section class="intro">
   <h2 class="page-title" data-aos="fade-up">Contact Us</h2>
   <form class="contact-form" data-aos="fade-up" data-aos-delay="200">
     <input type="text" placeholder="Full Name" required>
@@ -76,6 +153,7 @@
     <textarea rows="5" placeholder="Your Message" required></textarea>
     <button type="submit">Send Message</button>
   </form>
+  </section>
 
   <footer class="footer">
     <p>© 2018 Prestige Griffin. All rights reserved.</p>
