--- a/contact.html
+++ b/contact.html
@@ -144,6 +144,7 @@
       <a href="contact.html">Contact Us</a>
     </nav>
   </header>
+  <h2 class="page-title" data-aos="fade-up">Contact Us</h2>
  <form id="contact-form" class="contact-form" data-aos="fade-up" data-aos-delay="200">
     <input type="text" name="name" placeholder="Full Name" required>
     <input type="email" name="email" placeholder="Email Address" required>
