--- a/contact.html
+++ b/contact.html
@@ -144,6 +144,7 @@
       <a href="contact.html">Contact Us</a>
     </nav>
   </header>
+  <section class="intro">
   <h2 class="page-title" data-aos="fade-up">Contact Us</h2>
  <form id="contact-form" class="contact-form" data-aos="fade-up" data-aos-delay="200">
     <input type="text" name="name" placeholder="Full Name" required>
@@ -153,7 +154,7 @@
     <button type="submit">Send Message</button>
     <p id="status-message" style="text-align:center;margin-top:10px;"></p>
 </form>
-
+</section>
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script>
   (function() {
